# example-vehicle-telemetry

./: .env  .gitignore  CLAUDE.md  Cargo.toml  README.md  compose.yaml  justfile
.github/workflows/: ci.yaml
etc/: prometheus.yaml
src/: main.rs
