[package]
name = "example-vechicle-telemetry"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
bytes = "1"
clap = { version = "4", features = ["derive"] }
csv = "1"
governor = "0.6"
humantime = "2"
rand = "0.9"
rand_chacha = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tansu-client = "0.6"
tansu-sans-io = "0.6"
tokio = { version = "1", features = ["full"] }
url = "2"
